--- a/subjects/FTP/LightFTP/Dockerfile
+++ b/subjects/FTP/LightFTP/Dockerfile
@@ -1,68 +1,110 @@
-FROM ubuntu:20.04
+FROM rust:bullseye
+LABEL maintainer="Zou Dikai"
 
-# Install common dependencies
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get -y update && \
-    apt-get -y install sudo \ 
-    apt-utils \
-    build-essential \
-    openssl \
-    clang \
-    graphviz-dev \
-    git \
-    autoconf \
-    libgnutls28-dev \
-    libssl-dev \
-    llvm \
-    python3-pip \
-    nano \
-    net-tools \
-    vim \
-    gdb \
-    netcat \
-    strace \
-    wget
-
-# Add a new user ubuntu, pass: ubuntu
-RUN groupadd ubuntu && \
-    useradd -rm -d /home/ubuntu -s /bin/bash -g ubuntu -G sudo -u 1000 ubuntu -p "$(openssl passwd -1 ubuntu)"
-
-RUN chmod 777 /tmp
-
-RUN pip3 install gcovr==4.2
-
-# Use ubuntu as default username
-USER ubuntu
-WORKDIR /home/ubuntu
-
+ARG GITHUB_TOKEN
+ARG AUTHORIZED_KEY
+ARG proxy=http://172.17.0.1:7890
 # Import environment variable to pass as parameter to make (e.g., to make parallel builds with -j)
 ARG MAKE_OPT
 
+ENV http_proxy=$proxy
+ENV https_proxy=$proxy
+
+RUN sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list && apt clean
+
+# LLVM-11
+RUN apt-get update && apt-get install -y --no-install-recommends wget ca-certificates gnupg2 && rm -rf /var/lib/apt/lists
+RUN echo deb http://apt.llvm.org/focal/ llvm-toolchain-focal-11 main >> /etc/apt/sources.list
+RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - 
+
+# Install common dependencies
+ENV DEBIAN_FRONTEND=noninteractive
+# Packages
+##############
+# by line:
+#   build and afl
+#   llvm-11 (for afl-clang-lto)
+#   date challenge
+#   libxml2 challenge
+#   server/entrypoint
+#   user tools
+#   debugging tools
+RUN apt-get update && apt-get install -y \
+    git build-essential curl libssl-dev sudo libtool libtool-bin libglib2.0-dev bison flex automake python3 python3-dev python3-setuptools python-is-python3 libpixman-1-dev gcc-9-plugin-dev cgroup-tools \
+    clang-11 clang-tools-11 libc++1-11 libc++-11-dev libc++abi1-11 libc++abi-11-dev libclang1-11 libclang-11-dev libclang-common-11-dev libclang-cpp11 libclang-cpp11-dev liblld-11 liblld-11-dev liblldb-11 liblldb-11-dev libllvm11 libomp-11-dev libomp5-11 lld-11 lldb-11 python3-lldb-11 llvm-11 llvm-11-dev llvm-11-runtime llvm-11-tools \
+    rsync autopoint bison gperf autoconf texinfo gettext \
+    libtool pkg-config libz-dev python3-pip \
+    awscli openssh-server ncat netcat openssl \
+    emacs vim nano screen htop man manpages-posix-dev wget httpie bash-completion ripgrep \
+    gdb byobu \
+    graphviz-dev libcap-dev libpcap-dev \
+    iputils-ping telnet net-tools \
+    strace \
+    && rm -rf /var/lib/apt/lists
+
+# AFL
+###########
+RUN update-alternatives --install /usr/bin/clang clang $(which clang-11) 1 && \
+    update-alternatives --install /usr/bin/clang++ clang++ $(which clang++-11) 1 && \
+    update-alternatives --install /usr/bin/llvm-config llvm-config $(which llvm-config-11) 1 && \
+    update-alternatives --install /usr/bin/llvm-symbolizer llvm-symbolizer $(which llvm-symbolizer-11) 1 && \
+    update-alternatives --install /usr/bin/llvm-cov llvm-cov $(which llvm-cov-11) 1 && \
+    update-alternatives --install /usr/bin/llvm-profdata llvm-profdata $(which llvm-profdata-11) 1
+
+RUN pip3 install gcovr==4.2
+
+# Users & SSH
+##############
+RUN useradd --create-home --shell /bin/bash zdk
+# See the README - the password is set by the entry script
+# passwordless sudo access for ASAN and installing extra tools:
+RUN echo "zdk ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers && \
+    usermod -aG sudo zdk && \
+    mkdir /var/run/sshd
+
+RUN chmod 777 /tmp
+
+USER zdk
+WORKDIR /home/zdk
+
+RUN git config --global http.proxy $proxy && \
+    git config --global https.proxy $proxy
+
 # Set up fuzzers
-RUN git clone https://github.com/profuzzbench/aflnet.git && \
+# aflnet
+##############
+RUN git clone https://github.com/Kherrisan/aflnet.git && \
     cd aflnet && \
     make clean all $MAKE_OPT && \
     cd llvm_mode && make $MAKE_OPT
 
-RUN git clone https://github.com/profuzzbench/aflnwe.git && \
+# aflnwe
+##############
+RUN git clone https://github.com/Kherrisan/aflnwe.git && \
     cd aflnwe && \
     make clean all $MAKE_OPT && \
     cd llvm_mode && make $MAKE_OPT
 
+# libaflnet
+##############
+RUN rustup default nightly
+RUN git clone https://Kherrisan:$GITHUB_TOKEN@github.com/Kherrisan/libaflnet.git & \
+    cd libaflnet && \
+    cargo build
+
 # Set up environment variables for AFLNet
-ENV WORKDIR="/home/ubuntu/experiments"
-ENV AFLNET="/home/ubuntu/aflnet"
-ENV PATH="${PATH}:${AFLNET}:/home/ubuntu/.local/bin:${WORKDIR}"
+ENV WORKDIR="/home/zdk/experiments"
+ENV AFLNET="/home/zdk/aflnet"
+ENV PATH="${PATH}:${AFLNET}:/home/zdk/.local/bin:${WORKDIR}"
 ENV AFL_PATH="${AFLNET}"
 ENV AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES=1 \
     AFL_SKIP_CPUFREQ=1 \
     AFL_NO_AFFINITY=1
 
-
 RUN mkdir $WORKDIR
 
-COPY --chown=ubuntu:ubuntu fuzzing.patch ${WORKDIR}/fuzzing.patch
-COPY --chown=ubuntu:ubuntu gcov.patch ${WORKDIR}/gcov.patch
+COPY --chown=zdk:zdk fuzzing.patch ${WORKDIR}/fuzzing.patch
+COPY --chown=zdk:zdk gcov.patch ${WORKDIR}/gcov.patch
 
 # Set up environment variables for ASAN
 env ASAN_OPTIONS='abort_on_error=1:symbolize=0:detect_leaks=0:detect_stack_use_after_return=1:detect_container_overflow=0:poison_array_cookie=0:malloc_fill_byte=0:max_malloc_fill_size=16777216'
@@ -80,8 +122,8 @@ RUN cd $WORKDIR && \
 RUN cd ${WORKDIR}/LightFTP/Source/Release && \
     cp ${AFLNET}/tutorials/lightftp/fftp.conf ./ && \
     cp ${AFLNET}/tutorials/lightftp/ftpclean.sh ./ && \
-    cp -r ${AFLNET}/tutorials/lightftp/certificate /home/ubuntu && \
-    mkdir /home/ubuntu/ftpshare
+    cp -r ${AFLNET}/tutorials/lightftp/certificate /home/zdk && \
+    mkdir /home/zdk/ftpshare
 
 # Download and compile LightFTP for coverage analysis
 RUN cd $WORKDIR && \
@@ -92,20 +134,20 @@ RUN cd $WORKDIR && \
     cd Source/Release && \
     make CFLAGS="-fprofile-arcs -ftest-coverage" CPPFLAGS="-fprofile-arcs -ftest-coverage" CXXFLAGS="-fprofile-arcs -ftest-coverage" LDFLAGS="-fprofile-arcs -ftest-coverage" clean all $MAKE_OPT
 
-# Set up LightFTP for fuzzing
+# Set up LightFTP for coverage analysis
 RUN cd ${WORKDIR}/LightFTP-gcov/Source/Release && \
     cp ${AFLNET}/tutorials/lightftp/fftp.conf ./ && \
     cp ${AFLNET}/tutorials/lightftp/ftpclean.sh ./
 
 
-COPY --chown=ubuntu:ubuntu in-ftp ${WORKDIR}/in-ftp
-COPY --chown=ubuntu:ubuntu ftp.dict ${WORKDIR}/ftp.dict
-COPY --chown=ubuntu:ubuntu cov_script.sh ${WORKDIR}/cov_script
-COPY --chown=ubuntu:ubuntu run.sh ${WORKDIR}/run
-COPY --chown=ubuntu:ubuntu clean.sh ${WORKDIR}/ftpclean
+COPY --chown=zdk:zdk in-ftp ${WORKDIR}/in-ftp
+COPY --chown=zdk:zdk ftp.dict ${WORKDIR}/ftp.dict
+COPY --chown=zdk:zdk cov_script.sh ${WORKDIR}/cov_script
+COPY --chown=zdk:zdk run.sh ${WORKDIR}/run
+COPY --chown=zdk:zdk clean.sh ${WORKDIR}/ftpclean
 
 
 # For debugging purposes
 USER root
 RUN apt-get -y install ftp
-USER ubuntu
+USER zdk
