Fix: remove --cpuset-cpus because aflnwe abnormal behavior

--- a/subjects/FTP/LightFTP/Dockerfile
+++ b/subjects/FTP/LightFTP/Dockerfile
@@ -98,8 +98,7 @@ ENV LIBAFLNET="/home/ubuntu/libaflnet"
 ENV PATH="${PATH}:${AFLNET}:/home/ubuntu/.local/bin:${WORKDIR}:${LIBAFLNET}/target/debug"
 ENV AFL_PATH="${AFLNET}"
 ENV AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES=1 \
-    AFL_SKIP_CPUFREQ=1 \
-    AFL_NO_AFFINITY=1
+    AFL_SKIP_CPUFREQ=1
 
 RUN mkdir $WORKDIR
 
