Multi stage image building

--- a/subjects/FTP/BFTPD/Dockerfile
+++ b/subjects/FTP/BFTPD/Dockerfile
@@ -1,63 +1,24 @@
-FROM ubuntu:20.04
+ARG proxy=http://172.17.0.1:7890
+ARG MAKE_OPT
+ARG LIBAFLNET_VERSION=1.1.0
 
-# Install common dependencies
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get -y update && \
-    apt-get -y install sudo \ 
-    apt-utils \
-    build-essential \
-    openssl \
-    clang \
-    graphviz-dev \
-    git \
-    autoconf \
-    libgnutls28-dev \
-    libssl-dev \
-    llvm \
-    python3-pip \
-    nano \
-    net-tools \
-    vim \
-    gdb \
-    netcat \
-    strace \
-    wget
+####################################
+# Build BFTPD Image
+####################################
+FROM libaflnet-afl:1.0.0 AS bftpd
 
-# Add a new user ubuntu, pass: ubuntu
-RUN groupadd ubuntu && \
-    useradd -rm -d /home/ubuntu -s /bin/bash -g ubuntu -G sudo -u 1000 ubuntu -p "$(openssl passwd -1 ubuntu)"
-
-RUN chmod 777 /tmp
-
-RUN pip3 install gcovr==4.2
-
-# Use ubuntu as default username
 USER ubuntu
 WORKDIR /home/ubuntu
-
-# Import environment variable to pass as parameter to make (e.g., to make parallel builds with -j)
-ARG MAKE_OPT
-
-# Set up fuzzers
-RUN git clone https://github.com/profuzzbench/aflnet.git && \
-    cd aflnet && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
-
-RUN git clone https://github.com/profuzzbench/aflnwe.git && \
-    cd aflnwe && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
 
 # Set up environment variables for AFLNet
 ENV WORKDIR="/home/ubuntu/experiments"
 ENV AFLNET="/home/ubuntu/aflnet"
+ENV LIBAFLNET="/home/ubuntu/libaflnet"
 ENV PATH="${PATH}:${AFLNET}:/home/ubuntu/.local/bin:${WORKDIR}"
 ENV AFL_PATH="${AFLNET}"
 ENV AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES=1 \
     AFL_SKIP_CPUFREQ=1 \
     AFL_NO_AFFINITY=1
-
 
 RUN mkdir $WORKDIR
 
@@ -67,14 +28,16 @@ COPY --chown=ubuntu:ubuntu gcov.patch ${WORKDIR}/gcov.patch
 # Set up environment variables for ASAN
 env ASAN_OPTIONS='abort_on_error=1:symbolize=0:detect_leaks=0:detect_stack_use_after_return=1:detect_container_overflow=0:poison_array_cookie=0:malloc_fill_byte=0:max_malloc_fill_size=16777216'
 
-# Set up Bftpd for fuzzing
-RUN cd ${WORKDIR} && \
-    wget https://sourceforge.net/projects/bftpd/files/bftpd/bftpd-5.7/bftpd-5.7.tar.gz && \
-    tar -zxvf bftpd-5.7.tar.gz && \
-    cd bftpd && \
-    patch -p1 < ${WORKDIR}/fuzzing.patch && \
-    AFL_USE_ASAN=1 CC=afl-clang-fast make clean all $MAKE_OPT
+RUN git config --global http.proxy $proxy && \
+    git config --global https.proxy $proxy
 
+# Set up Bftpd for fuzzing
+COPY --chown=ubuntu:ubuntu bftpd-5.7.tar.gz ${WORKDIR}/bftpd-5.7.tar.gz
+RUN cd ${WORKDIR} && \
+    tar -zxvf bftpd-5.7.tar.gz && \
+    cd ${WORKDIR}/bftpd && \
+    patch -p1 < ${WORKDIR}/fuzzing.patch && \
+    AFL_USE_ASAN=1 CC=afl-clang-fast make clean all $MAKE_OPT CFLAGS='-g -O2 -DHAVE_CONFIG_H -Wall -I. -DVERSION=\"$(VERSION)\" -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DPREFIX=\"$(prefix)\" -fcommon'
 
 # Set up Bftpd for coverage analysis
 RUN cd ${WORKDIR} && \
@@ -82,8 +45,55 @@ RUN cd ${WORKDIR} && \
     tar -zxvf bftpd-5.7.tar.gz -C ${WORKDIR}/bftpd-gcov --strip-components=1 && \
     cd ${WORKDIR}/bftpd-gcov && \
     patch -p1 < ${WORKDIR}/gcov.patch && \
-    make $MAKE_OPT
+    make $MAKE_OPT \ 
+        CFLAGS='-fprofile-arcs -ftest-coverage -g -O2 -DHAVE_CONFIG_H -Wall -I. -DVERSION=\"$(VERSION)\" -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DPREFIX=\"$(prefix)\" -fcommon' \ 
+        CPPFLAGS="-fprofile-arcs -ftest-coverage" \
+        CXXFLAGS="-fprofile-arcs -ftest-coverage" \
+        LDFLAGS="-fprofile-arcs -ftest-coverage"
 
+####################################
+# Build Testing Image with fuzzers:
+# - aflnet
+# - aflnwe
+# - libaflnet
+####################################
+FROM libaflnet-rust:1.0.0
+
+ARG GITHUB_TOKEN
+
+USER ubuntu
+WORKDIR /home/ubuntu
+
+ENV http_proxy=$proxy
+ENV https_proxy=$proxy
+
+# Set up environment variables for AFLNet
+ENV WORKDIR="/home/ubuntu/experiments"
+ENV AFLNET="/home/ubuntu/aflnet"
+ENV AFLNWE="/home/ubuntu/aflnwe"
+ENV LIBAFLNET="/home/ubuntu/libaflnet"
+ENV PATH="${PATH}:${AFLNET}:/home/ubuntu/.local/bin:${WORKDIR}"
+ENV AFL_PATH="${AFLNET}"
+ENV AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES=1 \
+    AFL_SKIP_CPUFREQ=1 \
+    AFL_NO_AFFINITY=1
+
+# Clone and compile libaflnet
+RUN git clone https://Kherrisan:$GITHUB_TOKEN@github.com/Kherrisan/libaflnet.git
+    
+WORKDIR /home/ubuntu/libaflnet
+
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/usr/src/target \
+    . $HOME/.cargo/env && \
+    RUSTFLAGS="-A warnings" cargo build -Z unstable-options --release --out-dir /home/ubuntu/libaflnet
+
+RUN mkdir /home/ubuntu/ftpshare && \
+    chown -R ubuntu:ubuntu /home/ubuntu/ftpshare
+
+# Copy fuzzing target from prebuilt image: lightftp:1.0.0
+COPY --chown=ubuntu:ubuntu --from=bftpd ${WORKDIR}/bftpd ${WORKDIR}/bftpd
+COPY --chown=ubuntu:ubuntu --from=bftpd ${WORKDIR}/bftpd-gcov ${WORKDIR}/bftpd-gcov
 
 COPY --chown=ubuntu:ubuntu basic.conf ${WORKDIR}/
 COPY --chown=ubuntu:ubuntu in-ftp ${WORKDIR}/in-ftp
@@ -92,13 +102,6 @@ COPY --chown=ubuntu:ubuntu run.sh ${WORKDIR}/run
 COPY --chown=ubuntu:ubuntu clean.sh ${WORKDIR}/clean
 COPY --chown=ubuntu:ubuntu cov_script.sh ${WORKDIR}/cov_script
 
-RUN mkdir /home/ubuntu/ftpshare && \
-    chown -R ubuntu:ubuntu /home/ubuntu/ftpshare
-
-
 # Switch default user to root
 USER root
 WORKDIR /home/ubuntu
-
-# For debugging purposes
-RUN apt-get -y install ftp
