--- a/subjects/FTP/PureFTPD/Dockerfile
+++ b/subjects/FTP/PureFTPD/Dockerfile
@@ -1,72 +1,32 @@
-FROM ubuntu:20.04
-
-# Install common dependencies
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get -y update && \
-    apt-get -y install sudo \ 
-    apt-utils \
-    build-essential \
-    openssl \
-    clang \
-    graphviz-dev \
-    git \
-    autoconf \
-    libgnutls28-dev \
-    libssl-dev \
-    llvm \
-    python3-pip \
-    nano \
-    net-tools \
-    vim \
-    gdb \
-    netcat \
-    strace \
-    wget
-
-# Add a new user ubuntu, pass: ubuntu
-RUN groupadd ubuntu && \
-    useradd -rm -d /home/ubuntu -s /bin/bash -g ubuntu -G sudo -u 1000 ubuntu -p "$(openssl passwd -1 ubuntu)"
-
-RUN chmod 777 /tmp
-
-RUN pip install gcovr==4.2
-
-# Use ubuntu as default username
-USER ubuntu
-WORKDIR /home/ubuntu
-
-# Import environment variable to pass as parameter to make (e.g., to make parallel builds with -j)
+ARG proxy=http://172.17.0.1:7890
 ARG MAKE_OPT
+ARG LIBAFLNET_VERSION=1.1.0
 
-# Set up fuzzers
-RUN git clone https://github.com/profuzzbench/aflnet.git && \
-    cd aflnet && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
+####################################
+# Build PureFTPD Image
+####################################
+FROM libaflnet-afl:1.0.0 AS pureftpd
 
-RUN git clone https://github.com/profuzzbench/aflnwe.git && \
-    cd aflnwe && \
-    make clean all $MAKE_OPT && \
-    cd llvm_mode && make $MAKE_OPT
+ENV http_proxy=$proxy
+ENV https_proxy=$proxy
 
 # Set up environment variables for AFLNet
 ENV WORKDIR="/home/ubuntu/experiments"
 ENV AFLNET="/home/ubuntu/aflnet"
+ENV LIBAFLNET="/home/ubuntu/libaflnet"
 ENV PATH="${PATH}:${AFLNET}:/home/ubuntu/.local/bin:${WORKDIR}"
 ENV AFL_PATH="${AFLNET}"
 ENV AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES=1 \
-    AFL_SKIP_CPUFREQ=1 \
-    AFL_NO_AFFINITY=1
+    AFL_SKIP_CPUFREQ=1
 
+USER root
+RUN apt -y install automake
+USER ubuntu
 
 RUN mkdir $WORKDIR
 
 COPY --chown=ubuntu:ubuntu fuzzing.patch ${WORKDIR}/fuzzing.patch
 COPY --chown=ubuntu:ubuntu gcov.patch ${WORKDIR}/gcov.patch
-
-USER root
-RUN apt -y install automake
-USER ubuntu
 
 # Set up environment variables for ASAN
 env ASAN_OPTIONS='abort_on_error=1:symbolize=0:detect_leaks=0:detect_stack_use_after_return=1:detect_container_overflow=0:poison_array_cookie=0:malloc_fill_byte=0:max_malloc_fill_size=16777216'
@@ -74,6 +34,7 @@ env ASAN_OPTIONS='abort_on_error=1:symbolize=0:detect_leaks=0:detect_stack_use_a
 # Set up PureFTPD for fuzzing
 RUN cd ${WORKDIR} && \
     git clone https://github.com/jedisct1/pure-ftpd.git && \
+    cp -r pure-ftpd pure-ftpd-gcov && \
     cd pure-ftpd && \
     git checkout c21b45f && \
     patch -p1 < ${WORKDIR}/fuzzing.patch && \
@@ -82,14 +43,54 @@ RUN cd ${WORKDIR} && \
     make $MAKE_OPT
 
 # Set up PureFTPD for coverage analysis
-RUN cd ${WORKDIR} && \
-    git clone https://github.com/jedisct1/pure-ftpd.git pure-ftpd-gcov && \
-    cd pure-ftpd-gcov && \
+RUN cd ${WORKDIR}/pure-ftpd-gcov && \
     git checkout c21b45f && \
     patch -p1 < ${WORKDIR}/gcov.patch && \
     ./autogen.sh && \
     CFLAGS="-fprofile-arcs -ftest-coverage" CPPFLAGS="-fprofile-arcs -ftest-coverage" CXXFLAGS="-fprofile-arcs -ftest-coverage" LDFLAGS="-fprofile-arcs -ftest-coverage" ./configure --without-privsep -without-capabilities && \
     make $MAKE_OPT
+
+####################################
+# Build Testing Image with fuzzers:
+# - aflnet
+# - aflnwe
+# - libaflnet
+####################################
+
+FROM libaflnet-rust:1.0.0
+
+ARG GITHUB_TOKEN
+
+USER ubuntu
+WORKDIR /home/ubuntu
+
+ENV http_proxy=$proxy
+ENV https_proxy=$proxy
+
+# Set up environment variables for AFLNet
+ENV WORKDIR="/home/ubuntu/experiments"
+ENV AFLNET="/home/ubuntu/aflnet"
+ENV AFLNWE="/home/ubuntu/aflnwe"
+ENV LIBAFLNET="/home/ubuntu/libaflnet"
+ENV PATH="${PATH}:${AFLNET}:/home/ubuntu/.local/bin:${WORKDIR}"
+ENV AFL_PATH="${AFLNET}"
+ENV AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES=1 \
+    AFL_SKIP_CPUFREQ=1 \
+    AFL_NO_AFFINITY=1
+
+# Clone and compile libaflnet
+RUN git clone https://Kherrisan:$GITHUB_TOKEN@github.com/Kherrisan/libaflnet.git
+    
+WORKDIR /home/ubuntu/libaflnet
+
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/usr/src/target \
+    . $HOME/.cargo/env && \
+    RUSTFLAGS="-A warnings" cargo build -Z unstable-options --release --out-dir /home/ubuntu/libaflnet
+
+# Copy fuzzing target from prebuilt image: lightftp:1.0.0
+COPY --chown=ubuntu:ubuntu --from=pureftpd ${WORKDIR}/pure-ftpd ${WORKDIR}/pure-ftpd
+COPY --chown=ubuntu:ubuntu --from=pureftpd ${WORKDIR}/pure-ftpd-gcov ${WORKDIR}/pure-ftpd-gcov
 
 COPY --chown=ubuntu:ubuntu in-ftp ${WORKDIR}/in-ftp
 COPY --chown=ubuntu:ubuntu ftp.dict ${WORKDIR}/ftp.dict
@@ -102,6 +103,3 @@ USER root
 WORKDIR /home/ubuntu
 
 RUN useradd -rm -d /home/fuzzing -s /bin/bash -g ubuntu -G sudo -u 1001 fuzzing -p "$(openssl passwd -1 fuzzing)"
-
-# For debugging purposes
-RUN apt-get -y install ftp
