--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -75,6 +75,6 @@ RUN . "$HOME/.cargo/env" && \
     rustc --version; \
     rustup default nightly
 
-RUN printf "[source.crates-io]\nreplace-with = \"seu\"\n\n[source.ustc]\nregistry = \"sparse+https://mirrors.seu.edu.cn/crates.io-index/\"" > /home/ubuntu/.cargo/config
+RUN printf "[source.crates-io]\nreplace-with = \"seu\"\n\n[source.seu]\nregistry = \"sparse+https://mirrors.seu.edu.cn/crates.io-index/\"" > /home/ubuntu/.cargo/config
 
 COPY .zshrc /home/ubuntu/.zshrc
