--- a/subjects/MQTT/mosquitto/Dockerfile
+++ b/subjects/MQTT/mosquitto/Dockerfile
@@ -42,7 +42,7 @@ WORKDIR /home/ubuntu
 ARG MAKE_OPT
 
 # Set up fuzzers
-RUN git clone https://github.com/profuzzbench/aflnet.git && \
+RUN git clone https://github.com/aflnet/aflnet.git && \
     cd aflnet && \
     make clean all $MAKE_OPT && \
     cd llvm_mode && make $MAKE_OPT
