--- a/scripts/Dockerfile-env-ft
+++ b/scripts/Dockerfile-env-ft
@@ -1,5 +1,5 @@
-# FT-Net: https://github.com/fuzztruction-net/fuzztruction-net
-FROM nbars/fuzztruction-llvm_debug:llvmorg-17.0.6 AS llvm
+# https://github.com/fuzzing-peach/pingufuzzbench
+FROM ghcr.io/fuzzing-peach/fuzztruction-llvm_debug:llvmorg-17.0.6 AS llvm
 
 FROM ubuntu:24.04 AS builder
 
@@ -19,7 +19,9 @@ ENV CARGO_BUILD_JOBS=${CARGO_BUILD_JOBS}
 
 # Change the Ubuntu package mirror
 RUN apt update && apt install -y apt-transport-https ca-certificates
-RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.list && apt clean
+RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.list.d/ubuntu.sources && \
+    sed -i 's/security.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/ubuntu.sources && \
+    apt clean
 
 # # LLVM-17
 # RUN apt update && apt install -y --no-install-recommends wget gnupg2 && rm -rf /var/lib/apt/lists
