--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -5,12 +5,17 @@ FROM ${BASE_IMAGE}
 USER user
 ENV HOME=/home/user
 
+ARG HTTP_PROXY
+ARG HTTPS_PROXY
+ARG http_proxy=${HTTP_PROXY}
+ARG https_proxy=${HTTP_PROXY}
+ENV no_proxy="localhost,127.0.0.1,192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
+ENV NO_PROXY=${no_proxy}
+
 ARG FUZZER
 ARG TARGET
 ARG VERSION
 ARG GENERATOR
-ARG MAKE_OPT="-j8"
-ENV MAKE_OPT=${MAKE_OPT}
 ARG CARGO_BUILD_JOBS="8"
 ENV CARGO_BUILD_JOBS=${CARGO_BUILD_JOBS}
 ENV FUZZER=${FUZZER}
@@ -18,7 +23,6 @@ ENV TARGET=${TARGET}
 ENV VERSION=${VERSION}
 ENV GENERATOR=${GENERATOR}
 ENV TERM=xterm
-ENV no_proxy=localhost,127.0.0.1
 
 # RUN pwd
 RUN --mount=type=bind,source=.,target=/home/user/profuzzbench \
