--- a/scripts/Dockerfile-env-aflnet
+++ b/scripts/Dockerfile-env-aflnet
@@ -1,20 +1,21 @@
 FROM ubuntu:24.04
 
+ARG ZH_CN
 ARG HTTP_PROXY
 ARG HTTPS_PROXY
 ARG http_proxy=${HTTP_PROXY}    
 ARG https_proxy=${HTTP_PROXY}
-
-# ENV HTTP_PROXY=${HTTP_PROXY}
-# ENV HTTPS_PROXY=${HTTPS_PROXY}
-# ENV http_proxy=${HTTP_PROXY}
-# ENV https_proxy=${HTTP_PROXY}
-
 ARG MAKE_OPT="-j4"
+
+ENV ZH_CN=${ZH_CN}
 
 # Change the Ubuntu package mirror
 RUN apt update && apt install -y apt-transport-https ca-certificates
-RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.list && apt clean
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.list.d/ubuntu.sources && \
+        sed -i 's/security.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/ubuntu.sources && \
+        apt clean; \
+    fi
 
 # LLVM-17
 RUN apt update && apt install -y --no-install-recommends wget gnupg2 && rm -rf /var/lib/apt/lists
@@ -40,13 +41,19 @@ RUN ln -sf /usr/bin/clang-17 /usr/bin/clang && \
     ln -sf /usr/bin/clang++-17 /usr/bin/clang++ && \
     ln -sf /usr/bin/llvm-config-17 /usr/bin/llvm-config
 
-RUN pip3 install --break-system-packages -i https://mirrors.aliyun.com/pypi/simple gcovr
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        pip3 install --break-system-packages -i https://mirrors.aliyun.com/pypi/simple gcovr; \
+    else \
+        pip3 install --break-system-packages gcovr; \
+    fi
 
 RUN chmod 777 /tmp
 
-RUN echo "Acquire::http::Proxy \"${HTTP_PROXY}\";" > /etc/apt/apt.conf.d/99proxy && \
-    echo "Acquire::ftp::Proxy \"${HTTP_PROXY}\";" >> /etc/apt/apt.conf.d/99proxy && \
-    echo "Acquire::https::Proxy \"${HTTP_PROXY}\";" >> /etc/apt/apt.conf.d/99proxy
+RUN if [ "${HTTP_PROXY}" != "" ]; then \
+        echo "Acquire::http::Proxy \"${HTTP_PROXY}\";" > /etc/apt/apt.conf.d/99proxy && \
+        echo "Acquire::ftp::Proxy \"${HTTP_PROXY}\";" >> /etc/apt/apt.conf.d/99proxy && \
+        echo "Acquire::https::Proxy \"${HTTP_PROXY}\";" >> /etc/apt/apt.conf.d/99proxy; \
+    fi
 
 # Users
 ##############
@@ -56,10 +63,6 @@ ARG GROUP_ID=1000
 ENV USER_ID=${USER_ID}
 ENV GROUP_ID=${GROUP_ID}
 
-# ubuntu:23.04 has an 'ubuntu' user and group
-# so we use the 'user' as the default
-# to avoid the conflict between ${USER_ID} and the id of 'ubuntu'
-# here we remove the existed user 'ubuntu'
 RUN userdel $(getent passwd ${USER_ID} | cut -d: -f1) || true
 RUN groupdel $(getent group ${GROUP_ID} | cut -d: -f1) || true
 RUN groupadd -g ${GROUP_ID} user && \
@@ -70,6 +73,10 @@ RUN groupadd -g ${GROUP_ID} user && \
 USER user
 WORKDIR /home/user
 ENV HOME=/home/user
+
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        git config --global url."https://gitclone.com/github.com/".insteadOf "https://github.com/"; \
+    fi
 
 RUN git config --global http.version HTTP/1.1 && \
     git config --global user.name Kherrisan && \
@@ -87,9 +94,9 @@ RUN zsh -c ". ~/.zshrc"
 ##############
 
 # AFLNet
-RUN git clone https://gitee.com/skyworld123/aflnet.git && \
+RUN git clone https://github.com/AFLNet/AFLNet.git aflnet && \
     cd aflnet && \
-    git checkout 62d63a59230bb5f5c6e54cddd381b9425dba3726 && \
+    git checkout 6d86ca0cf6852cfa7a776a77fb7886d8bee46c14 && \
     git apply /tmp/patches/aflnet.patch && \
     make clean all ${MAKE_OPT} && \
     cd llvm_mode && make ${MAKE_OPT}
@@ -111,6 +118,6 @@ RUN gcc -shared -fpic fake_random.c -g -o libfake_random.so && \
     echo "${HOME}" | sudo tee "/etc/ld.so.conf.d/fake_random.conf" && \
     sudo ldconfig
 
-# Disable ASLR fowever
+# Disable ASLR
 RUN echo "kernel.randomize_va_space = 0" | sudo tee -a /etc/sysctl.d/01-disable-aslr.conf && \
     sudo sysctl -p /etc/sysctl.d/01-disable-aslr.conf
