--- a/scripts/Dockerfile-eval
+++ b/scripts/Dockerfile-eval
@@ -1,19 +1,22 @@
-FROM ubuntu:23.04
+FROM ubuntu:24.04
 
 ARG HTTP_PROXY
 ARG HTTPS_PROXY
+ARG http_proxy=$HTTP_PROXY
+ARG https_proxy=$HTTP_PROXY
+ARG ZH_CN
 
-ENV HTTP_PROXY=${HTTP_PROXY}
-ENV HTTPS_PROXY=${HTTPS_PROXY}
-ENV http_proxy=${HTTP_PROXY}
-ENV https_proxy=${HTTP_PROXY}
+ENV ZH_CN=${ZH_CN}
 
 # Change the Ubuntu package mirror
 RUN apt update && apt install -y apt-transport-https ca-certificates
-RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.list && apt clean
+RUN if [ "${ZH_CN}" = "true" ]; then \
+        sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.list.d/ubuntu.sources && \
+        sed -i 's/security.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/ubuntu.sources && \
+        apt clean; \
+    fi
 
 ENV DEBIAN_FRONTEND=noninteractive
-
 RUN --mount=type=cache,target=/var/cache/apt --mount=type=cache,target=/var/lib/apt \
     apt update -y && \
     apt install -y \
@@ -34,9 +37,15 @@ RUN groupadd -g ${GROUP_ID} user && \
 
 USER user
 WORKDIR /home/user
-RUN --mount=type=bind,source=scripts,target=/home/user/scripts \
-    --mount=type=cache,target=/home/user/.cache/pip \
-    sudo pip3 install --break-system-packages -i https://mirrors.aliyun.com/pypi/simple -r scripts/requirements.txt
+
+RUN --mount=type=cache,target=/root/.cache/pip \
+    --mount=type=bind,source=scripts,target=/root/scripts \
+    if [ "${ZH_CN}" = "true" ]; then \
+        sudo -E pip3 install --break-system-packages -i https://mirrors.aliyun.com/pypi/simple -r /root/scripts/requirements.txt; \
+    else \
+        sudo -E pip3 install --break-system-packages -r /root/scripts/requirements.txt; \
+    fi
+
 RUN jupyter server --generate-config && \
     echo "c.NotebookApp.token = ''" >> /home/user/.jupyter/jupyter_server_config.py && \
     echo "c.NotebookApp.disable_check_xsrf = True" >> /home/user/.jupyter/jupyter_server_config.py
